投稿機能をほぼ終了

--- a/src/main/resources/templates/block/header_boot.html
+++ b/src/main/resources/templates/block/header_boot.html
@@ -2,6 +2,7 @@
 
 <html xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+
 <header th:fragment="headerA_boot">
 
 	<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
@@ -9,7 +10,7 @@
 
 			<a class="navbar-brand" href="/">コアラマニアとは？</a>
 			<button class="navbar-toggler" type="button"
-				data-bs-toggle="collapse" data-bs-target="#navbarsExampleDefault"
+				data-toggle="collapse" data-target="#navbarsExampleDefault"
 				aria-controls="navbarsExampleDefault" aria-expanded="false"
 				aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
