--- a/src/main/resources/templates/post/postInsert.html
+++ b/src/main/resources/templates/post/postInsert.html
@@ -4,20 +4,21 @@
 
 <head>
 <meta charset="utf-8">
-<!-- Bootstrap core CSS -->
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
 <script src="/js/jquery-ui.min.js"></script>
 <script src="/js/datepicker-ja.js"></script>
 <link href="/css/jquery-ui.min.css" rel="stylesheet">
+<script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+<script src="/js/popper.min.js"></script>
 <link
 	href=https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css
 	rel="stylesheet"
 	integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
 	crossorigin="anonymous">
+<link href="/css/starter-template.css" rel="stylesheet">
 <link href="/css/calender.css" rel="stylesheet">
 <link href="/css/postForm.css" rel="stylesheet">
-<script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
-
 <script type="text/javascript">
 	$(function() {
 
@@ -222,12 +223,6 @@
 
 <body>
 	<div th:replace="~{block/header_boot::headerA_boot}"></div>
-	<br>
-	<br>
-	<br>
-	<br>
-	
-	
 	<!-- Modal -->
 	<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
 	  <div class="modal-dialog modal-dialog-centered" role="document">
@@ -256,19 +251,19 @@
 	
 	<div class="container">
 		<h2 th:text="${zoo.zoo_name} + へ投稿"></h2>
-		<form th:action="@{/post/insert}" method="post"
+		<form th:action="@{/post/insertParentPost}" method="post"
 			enctype="multipart/form-data" th:object="${postInsertForm}">
 			<input type="hidden" th:field="*{zoo_id}">
-			<div th:id="visitDate">
+			<div th:id="visitDate" class="form-group">
 				訪問日: <input type="text" class="datepicker" name="visitdate" value=""
 					placeholder="クリックして日付を入力" readonly></input>
 					<button type="button" class="btn btn-secondary btn-sm" id="dateCancel" style = "display:none">指定しない</button>
 			</div>
-			<div th:id="content">
+			<div th:id="contents" class="form-group">
 				<div>投稿内容</div>
 				<textarea name="contents" class="form-control postTextarea" th:errorclass="is-invalid"></textarea>
 			</div>
-			<div th:id="image">
+			<div th:id="image" class="form-group">
 				<div>
 					写真(5枚まで)
 					  <button class="btn btn-outline-success btn-sm addInputFileButton"
