--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,8 +4,12 @@
 
 <head>
 <meta charset="utf-8">
+<meta name="viewport"
+	content="width=device-width,initial-scale=1,maximum-scale=1">
 <title>koalaMania</title>
 
+<script th:src="@{/webjars/jquery/jquery.min.js}"></script>
+<script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
 <link rel="canonical"
 	href="https://getbootstrap.jp/docs/5.0/examples/starter-template/">
 
