--- a/src/main/resources/templates/post/postDetail.html
+++ b/src/main/resources/templates/post/postDetail.html
@@ -1,9 +1,13 @@
 <!doctype html>
 <html xmlns:th="http://www.thymeleaf.org"
-	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+	xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head>
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<script th:src="@{/webjars/jquery/jquery.min.js}"></script>
+<script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
 <link rel="canonical"
 	href="https://getbootstrap.jp/docs/5.0/examples/starter-template/">
 <!-- Bootstrap core CSS -->
@@ -13,7 +17,6 @@
 	integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
 	crossorigin="anonymous">
 
-<script th:src="@{/webjars/jquery/jquery.min.js}"></script>
 
 <!-- Custom styles for this template -->
 <link href="/css/starter-template.css" rel="stylesheet">
@@ -35,16 +38,81 @@
 				return false;
 			}
 		});
+
+		$(function() {
+			$('.deletePost').click(function(e) {
+				const deleteImageFalg = confirm('この投稿を削除してもよろしいですか？');
+				if (deleteImageFalg) {
+					const post_id = $(this).next().val();
+					const zoo_id = $(this).next().next().val();
+					const csrf = $(this).next().next().next().val();
+					$('<form/>', {
+						action : '/post/delete',
+						method : 'post'
+					}).append($('<input/>', {
+						type : 'hidden',
+						name : 'post_id',
+						value : post_id
+					})).append($('<input/>', {
+						type : 'hidden',
+						name : 'zoo_id',
+						value : zoo_id
+					})).append($('<input/>', {
+						type : 'hidden',
+						name : '_csrf',
+						value : csrf
+					})).appendTo(document.body).submit();
+				}
+			});
+
+		});
+		
+		$(function() {
+			$('.deleteChildPost').click(function(e) {
+				const deleteImageFalg = confirm('この投稿を削除してもよろしいですか？');
+				if (deleteImageFalg) {
+					const post_id = $(this).next().val();
+					const zoo_id = $(this).next().next().val();
+					const parent_id = $(this).next().next().next().val();
+					const csrf = $(this).next().next().next().next().val();
+					$('<form/>', {
+						action : '/post/deleteChild',
+						method : 'post'
+					}).append($('<input/>', {
+						type : 'hidden',
+						name : 'post_id',
+						value : post_id
+					})).append($('<input/>', {
+						type : 'hidden',
+						name : 'zoo_id',
+						value : zoo_id
+					})).append($('<input/>', {
+						type : 'hidden',
+						name : 'parent_id',
+						value : parent_id
+					})).append($('<input/>', {
+						type : 'hidden',
+						name : '_csrf',
+						value : csrf
+					})).appendTo(document.body).submit();
+				}
+			});
+
+		});
 	});
 </script>
+
 </head>
 
 <body>
 	<div th:replace="~{block/header_boot::headerA_boot}"></div>
 	<div class="container">
 		<div th:object="${post.zoo}">
-			<h1 th:text="*{zoo_name}"></h1>
-			<h3 th:text="*{prefecture.name}"></h3>
+			<a th:href="@{/zoo/detail/{zoo_id}(zoo_id=${post.zoo.zoo_id})}"
+				style="text-decoration: none; color: black;">
+				<h1 th:text="*{zoo_name}"></h1>
+				<h3 th:text="*{prefecture.name}"></h3>
+			</a>
 		</div>
 		<div th:object="${post}" style="margin: 10px; border: solid;">
 			<div style="margin: 10px;">
@@ -53,6 +121,20 @@
 				<a th:href="@{/user/mypage/{user_id}(user_id=*{loginUser.user_id})}"
 					th:text="*{loginUser.userName}"> </a> <span
 					th:text="*{displayDiffTime}"></span>
+				<button sec:authorize="isAuthenticated()"
+					class="btn btn-danger btn-sm deletePost"
+					th:if="*{loginUser.user_id} == ${#authentication.principal.user_id}"
+					type="button">この投稿を削除</button>
+				<input sec:authorize="isAuthenticated()"
+					th:if="*{loginUser.user_id} == ${#authentication.principal.user_id}"
+					type="hidden" name="post_id" th:value="*{post_id}"> <input
+					sec:authorize="isAuthenticated()"
+					th:if="*{loginUser.user_id} == ${#authentication.principal.user_id}"
+					type="hidden" name="zoo_id" th:value="${post.zoo.zoo_id}">
+				<input sec:authorize="isAuthenticated()"
+					th:if="*{loginUser.user_id} == ${#authentication.principal.user_id}"
+					type="hidden" th:name="${_csrf.parameterName}"
+					th:value="${_csrf.token}" />
 			</div>
 			<div
 				th:unless="*{#dates.format(visitDate,'yyyy年M月d日')} == '9999年1月1日'"
@@ -70,12 +152,14 @@
 					th:href="@{/detail/{animal_id}(animal_id=*{animal.animal_id})}"
 					th:text="'#' + *{animal.name}"></a><br
 					th:unless="*{animal} == null"> <img th:src="*{imageAddress}"
-					width="200px" height="200px" style="border: solid;">
+					width="200px" style="border: solid;">
 				</span>
 			</div>
+			<div th:text="*{#dates.format(createdDate,'yyyy.MM.dd  hh:mm')}"></div>
 		</div>
 		<div class="container" style="margin: 10px;">
-			<form th:action="@{/post/insertChildPost}" method="post"
+			<form sec:authorize="isAuthenticated()"
+				th:action="@{/post/insertChildPost}" method="post"
 				th:object="${postInsertForm}">
 				<input type="hidden" th:field="*{parent_id}"> <input
 					type="hidden" th:field="*{parent_id}">
@@ -88,9 +172,12 @@
 					<button class="btn btn-outline-primary btn-sm" id="submitButton"
 						type="submit">コメントを送信</button>
 					<button class="btn btn-warning btn-sm" type="button"
-						onclick="window.history.back(); return false;">戻る</button>
+						th:onclick="'location.href = \'' +@{/zoo/detail/{zoo_id}(zoo_id=${post.zoo.zoo_id})} + '\''">戻る</button>
 				</div>
 			</form>
+			<a th:href="@{/login}" sec:authorize="!isAuthenticated()">
+				<button class="btn btn-outline-success mx-2" type="submit">ログインしてコメントする</button>
+			</a>
 		</div>
 		<div th:each="childPost : ${post.childrenPost}"
 			th:object="${childPost}" style="margin: 10px; border: solid;">
@@ -100,9 +187,29 @@
 				<a th:href="@{/user/mypage/{user_id}(user_id=*{loginUser.user_id})}"
 					th:text="*{loginUser.userName}"> </a> <span
 					th:text="*{displayDiffTime}"></span>
+				<button sec:authorize="isAuthenticated()"
+					class="btn btn-danger btn-sm deleteChildPost"
+					th:if="*{loginUser.user_id} == ${#authentication.principal.user_id}"
+					type="button">この投稿を削除</button>
+				<input sec:authorize="isAuthenticated()"
+					th:if="*{loginUser.user_id} == ${#authentication.principal.user_id}"
+					type="hidden" name="post_id" th:value="*{post_id}">
+				 <input
+					sec:authorize="isAuthenticated()"
+					th:if="*{loginUser.user_id} == ${#authentication.principal.user_id}"
+					type="hidden" name="zoo_id" th:value="${post.zoo.zoo_id}">
+				 <input
+					sec:authorize="isAuthenticated()"
+					th:if="*{loginUser.user_id} == ${#authentication.principal.user_id}"
+					type="hidden" name="parent_id" th:value="${post.post_id}">
+				<input sec:authorize="isAuthenticated()"
+					th:if="*{loginUser.user_id} == ${#authentication.principal.user_id}"
+					type="hidden" th:name="${_csrf.parameterName}"
+					th:value="${_csrf.token}" />
 			</div>
 			<div th:text="*{contents}"
 				style="white-space: pre-wrap; margin: 10px;"></div>
+			<div th:text="*{#dates.format(createdDate,'yyyy.MM.dd  hh:mm')}"></div>
 		</div>
 	</div>
 </body>
