--- a/src/main/resources/templates/block/header_boot.html
+++ b/src/main/resources/templates/block/header_boot.html
@@ -8,46 +8,53 @@
 	<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
 		<div class="container-fluid">
 
-			<a class="navbar-brand" href="/">コアラマニアとは？</a>
-			<button class="navbar-toggler" type="button"
-				data-toggle="collapse" data-target="#navbarsExampleDefault"
+			<button class="navbar-toggler" type="button" data-toggle="collapse"
+				data-target="#navbarsExampleDefault"
 				aria-controls="navbarsExampleDefault" aria-expanded="false"
 				aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 
+
 			<div class="collapse navbar-collapse" id="navbarsExampleDefault">
+				<br>
+				<div sec:authorize="!isAuthenticated()" class="d-flex flex-row">
+					<a th:href="@{/login}"><button class="btn btn-success mx-2"
+							type="submit">ログイン</button> </a> <a th:href="@{/signup}">
+						<button class="btn btn-md btn-outline-success mx-2" type="submit">アカウント登録</button>
+					</a>
+				</div>
+
+				<div sec:authorize="isAuthenticated()" class="d-flex flex-row">
+					<a
+						th:href="@{/user/mypage/{id}(id = ${#authentication.principal.user_id})}">
+						<img
+						th:unless="${#authentication.principal.profileImagePath == null}"
+						th:src="${#authentication.principal.profileImagePath}" height="40"
+						alt="マイページ"> <img
+						th:if="${#authentication.principal.profileImagePath == null}"
+						th:src="@{/images/user/profile/defaultUser.png}" height="40"
+						alt="マイページ">
+					</a>
+					<form method="post" th:action="@{/logout}">
+						<button class="btn btn-md btn-success mx-2" type="submit">ログアウト</button>
+					</form>
+				</div>
+
+				<hr class="divider my-2" />
 				<ul class="navbar-nav me-auto mb-2 mb-md-0">
 					<li class="nav-item active"><a class="nav-link"
-						aria-current="page" href="#">コアラの記録</a></li>
+						aria-current="page" href="/discription">コアラマニアとは？</a></li>
 					<li class="nav-item"><a class="nav-link" href="/insert">新しいコアラの登録</a></li>
-					<li class="nav-item"><a class="nav-link" href="https://tayori.com/form/e976498f95636ad99bb9b6dbe901499a642cd107">お問い合わせ</a></li>
+					<li class="nav-item active"><a class="nav-link"
+						aria-current="page" href="#">コアラ画像・記録の投稿</a></li>
+					<li class="nav-item"><a class="nav-link"
+						href="https://tayori.com/form/e976498f95636ad99bb9b6dbe901499a642cd107">お問い合わせ</a></li>
 				</ul>
-						
-					<div sec:authorize="!isAuthenticated()" class="d-flex flex-row">
-						<a th:href="@{/signup}">
-							<button class="btn btn-md btn-success mx-2" type="submit">アカウント登録</button>
-						</a> <a th:href="@{/login}">
-							<button class="btn btn-outline-success mx-2" type="submit">ログイン</button>
-						</a>
-					</div>
-					<div sec:authorize="isAuthenticated()" class="d-flex flex-row">
-						<a
-							th:href="@{/user/mypage/{id}(id = ${#authentication.principal.user_id})}">
-							<img
-							th:unless="${#authentication.principal.profileImagePath == null}"
-							th:src="${#authentication.principal.profileImagePath}"
-							height="40" alt="マイページ"> <img
-							th:if="${#authentication.principal.profileImagePath == null}"
-							th:src="@{/images/user/profile/defaultUser.png}" height="40"
-							alt="マイページ">
-						</a>
-						<form method="post" th:action="@{/logout}">
-							<button class="btn btn-md btn-success mx-2" type="submit">ログアウト</button>
-						</form>
-					</div>
-				</div>
+
+
 			</div>
+		</div>
 	</nav>
 </header>
 
