--- a/src/main/resources/templates/familytree.html
+++ b/src/main/resources/templates/familytree.html
@@ -1,7 +1,27 @@
+
 <!doctype html>
 <html xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+
 <head>
+<meta charset="utf-8">
+<!-- <meta name="viewport"
+	content="width=device-width,initial-scale=1,maximum-scale=1">
+ハンバーガーメニューにすると家系図に影響が出る
+ -->
+
+<link
+	href=https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css
+	rel="stylesheet"
+	integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
+	crossorigin="anonymous">
+
+<script th:src="@{/webjars/jquery/jquery.min.js}"></script>
+<script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+<link rel="canonical"
+	href="https://getbootstrap.jp/docs/5.0/examples/starter-template/">
+<!-- Custom styles for this template -->
+<link href="/css/searchResult.css" rel="stylesheet">
 <meta charset="utf-8">
 <link href="/css/familytree.css" rel="stylesheet">
 <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
@@ -250,6 +270,8 @@ test.append("image")
 </script>
 </head>
 <body>
-<a class="btn btn-sm btn-primary" th:href="@{/search}">一覧へ戻る</a>
+<div th:replace="~{block/header_boot::headerA_boot}"></div>
 <div id="graph"></div>
+<a class="btn btn-sm btn-primary mx-2" th:href="@{/search}">一覧へ戻る</a>
+
 </body>
