--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,44 +3,44 @@
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
 <head>
-<meta charset="utf-8">
-<meta name="viewport"
-	content="width=device-width,initial-scale=1,maximum-scale=1">
-<title>koalaMania</title>
-
-<script th:src="@{/webjars/jquery/jquery.min.js}"></script>
-<script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
-<link rel="canonical"
-	href="https://getbootstrap.jp/docs/5.0/examples/starter-template/">
-
-<!-- Bootstrap core CSS -->
-<link
-	href=https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css
-	rel="stylesheet"
-	integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
-	crossorigin="anonymous">
-
-<!-- Favicons -->
-<link rel="apple-touch-icon"
-	href="/docs/5.0/assets/img/favicons/apple-touch-icon.png"
-	sizes="180x180">
-<link rel="icon" href="/docs/5.0/assets/img/favicons/favicon-32x32.png"
-	sizes="32x32" type="image/png">
-<link rel="icon" href="/docs/5.0/assets/img/favicons/favicon-16x16.png"
-	sizes="16x16" type="image/png">
-<link rel="manifest" href="/docs/5.0/assets/img/favicons/manifest.json">
-<link rel="mask-icon"
-	href="/docs/5.0/assets/img/favicons/safari-pinned-tab.svg"
-	color="#7952b3">
-<link rel="icon" href="/docs/5.0/assets/img/favicons/favicon.ico">
-<meta name="theme-color" content="#7952b3">
-
-<link href="/css/background.css" rel="stylesheet">
-<link href="/css/starter-template.css" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.gstatic.com">
-<link
-	href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@900&display=swap"
-	rel="stylesheet">
+	<meta charset="utf-8">
+	<meta name="viewport"
+		content="width=device-width,initial-scale=1,maximum-scale=1">
+	<title>koalaMania</title>
+	
+	<script th:src="@{/webjars/jquery/jquery.min.js}"></script>
+	<script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+	<link rel="canonical"
+		href="https://getbootstrap.jp/docs/5.0/examples/starter-template/">
+	
+	<!-- Bootstrap core CSS -->
+	<link
+		href=https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css
+		rel="stylesheet"
+		integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
+		crossorigin="anonymous">
+	
+	<!-- Favicons -->
+	<link rel="apple-touch-icon"
+		href="/docs/5.0/assets/img/favicons/apple-touch-icon.png"
+		sizes="180x180">
+	<link rel="icon" href="/docs/5.0/assets/img/favicons/favicon-32x32.png"
+		sizes="32x32" type="image/png">
+	<link rel="icon" href="/docs/5.0/assets/img/favicons/favicon-16x16.png"
+		sizes="16x16" type="image/png">
+	<link rel="manifest" href="/docs/5.0/assets/img/favicons/manifest.json">
+	<link rel="mask-icon"
+		href="/docs/5.0/assets/img/favicons/safari-pinned-tab.svg"
+		color="#7952b3">
+	<link rel="icon" href="/docs/5.0/assets/img/favicons/favicon.ico">
+	<meta name="theme-color" content="#7952b3">
+	
+	<link href="/css/background.css" rel="stylesheet">
+	<link href="/css/starter-template.css" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link
+		href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@900&display=swap"
+		rel="stylesheet">
 
 </head>
 
@@ -75,7 +75,7 @@
             </div>
               <div class="topsearch_keyword">
                 <div class="formtext">
-                  <input class="formtext" type="text" name="keyword" value="" placeholder="コアラの名前">
+                  <input class="formtext" type="text" name="keyword" value="" placeholder="コアラ・動物園名">
                   <button class="topsearch_button" type="submit">さがす</button>
                 </div>
               </div>
@@ -88,8 +88,8 @@
 	<section class="page-section" id="services">
 		<div class="container">
 			<br>
-			<h2 class="text-center mt-0">各種機能・新着情報などを以下に表示</h2>
-			<hr class="divider my-4" />
+			<h3 class="text-center mt-0">各種機能・新着情報等</h3>
+			<hr class="divider my-2" />
 			<div class="row">
 				<div class="col-lg-3 col-md-6 text-center">
 					<div class="mt-5">
