--- a/src/main/resources/templates/insert.html
+++ b/src/main/resources/templates/insert.html
@@ -220,45 +220,42 @@
 
 <body>
 	<div th:replace="~{block/header_boot::headerA_boot}"></div>
-	<div class="container" >
-	
-		<h1 th:text="${title}" ></h1>
+	<div class="container">
+
+		<h1 th:text="${title}"></h1>
 		<!--タイトル名を 変数式でControllerから取得 -->
 
 		<form th:action="@{/insert}" method="post"
 			enctype="multipart/form-data" th:object="${animalInsertForm}"
 			onsubmit="return validateSubmit(this);">
-			<input th:unless="*{animal_id}==0" type="hidden"
+
+			<div class="form-group">
+				名前<input type="text" class="form-control" th:field="*{name}"
+					th:errorclass="is-invalid" />
+				<div class="invalid-feedback" th:errors="*{name}"></div>
+			</div>
+			<br> <input th:unless="*{animal_id}==0" type="hidden"
 				th:field="*{animal_id}"> <input type="hidden"
-				th:field="*{profileImagePath}"> プロフィール写真：<br> <span
+				th:field="*{profileImagePath}"> プロフィール画像<br> <span
 				th:id="*{profileImagePath}" th:if="*{profileImagePath}"> <img
 				th:src="*{profileImagePath}" width="200" height="200">
-				<button class="btn btn-danger btn-sm deleteImageButton"
-					type="button">削除</button>
 			</span>
+
 			<div id="animalProfileImageUpload">
 				<input type="file" accept="image/*"
 					th:field="*{animalProfileImageUpload}" th:errorclass="is-invalid"
 					class="form-control-file">
-				<button class="btn btn-outline-warning btn-sm"
-					id="cancelInputFileButton" type="button">写真取消</button>
-				<br>
 			</div>
+			<br>
 
 			<div class="form-group">
-				名前：<input type="text" class="form-control" th:field="*{name}"
-					th:errorclass="is-invalid" />
-				<div class="invalid-feedback" th:errors="*{name}"></div>
-			</div>
-			<div class="form-group">
-				性別：<select th:field="*{sex}">
+				性別 <select th:field="*{sex}">
 					<option th:each="item : ${sexItems}" th:value="${item.key}"
 						th:text="${item.value}"></option>
 				</select>
 			</div>
-
 			<div class="form-group">
-				生年月日：<select th:field="*{birthYear}">
+				生年月日 <select th:field="*{birthYear}">
 					<option value="0">--</option>
 					<option th:each="i : ${#numbers.sequence(1990, 2021)}"
 						th:value="${i}" th:text="${i}"></option>
@@ -273,20 +270,43 @@
 				</select>日
 			</div>
 			<div class="form-group">
-				母親：<select th:field="*{mother_id}" th:errorclass="is-invalid">
+				生死 <select th:field="*{is_alive}" onchange="isAliveFlag(this);">
+					<option th:each="item : ${isAliveItems}" th:value="${item.key}"
+						th:text="${item.value}"></option>
+				</select>
+			</div>
+			<div class="form-group">
+				死亡日 <select th:field="*{deathYear}" th:disabled="*{is_alive} == 1">
+					<option value="0">--</option>
+					<option th:each="i : ${#numbers.sequence(1990, 2021)}"
+						th:value="${i}" th:text="${i}" th:selected="${i}==2000"></option>
+				</select>年 <select th:field="*{deathMonth}" th:disabled="*{is_alive} == 1">
+					<option value="0">--</option>
+					<option th:each="i : ${#numbers.sequence(01, 12)}" th:value="${i}"
+						th:text="${i}"></option>
+				</select>月 <select th:field="*{deathDay}" th:disabled="*{is_alive} == 1">
+					<option value="0">--</option>
+					<option th:each="i : ${#numbers.sequence(01, 31)}" th:value="${i}"
+						th:text="${i}"></option>
+				</select>日
+			</div>
+			<div class="form-group">
+				母親 <select th:field="*{mother_id}" th:errorclass="is-invalid">
 					<!-- id とnameはform用 -->
 					<option th:each="mother : ${motherList}"
 						th:value="${mother.animal_id}" th:text="${mother.name}"></option>
-				</select> 父親：<select th:field="*{father_id}" th:errorclass="is-invalid">
+				</select> <br> 父親 <select th:field="*{father_id}"
+					th:errorclass="is-invalid">
 					<option th:each="father : ${fatherList}"
 						th:value="${father.animal_id}" th:text="${father.name}"></option>
 				</select>
 			</div>
+			<br>
 			<div th:id="zooHistory">
 				<div th:id="zooHistoryDiv" th:each="animalZoo : *{animalZooHistory}"
 					th:object="${animalZoo}">
 					<div class="form-group" id="zooForm">
-						動物園：<select th:name="insertZoo">
+						動物園 <select th:name="insertZoo">
 							<option th:each="zoo : ${zooList}" th:value="${zoo.zoo_id}"
 								th:text="${zoo.zoo_name}"
 								th:selected="${animalInsertForm.animalZooHistory[__${animalZooStat.index}__].zoo.zoo_id} == ${zoo.zoo_id}"></option>
@@ -296,7 +316,7 @@
 					</div>
 
 					<div class="form-group" th:id="admissionForm">
-						入園日： <select th:name="admissionYear">
+						入園日 <select th:name="admissionYear">
 							<option value="0">--</option>
 							<option th:each="i : ${#numbers.sequence(1990, 2021)}"
 								th:value="${i}" th:text="${i}"
@@ -327,7 +347,7 @@
 					</div>
 
 					<div class="form-group" th:id="exitForm">
-						退園日： <select th:name="exitYear">
+						退園日 <select th:name="exitYear">
 							<option value="0">--</option>
 							<option th:each="i : ${#numbers.sequence(1990, 2021)}"
 								th:value="${i}" th:text="${i}"
@@ -362,67 +382,28 @@
 			<button class="btn btn-outline-success btn-sm addHistoryButton"
 				type="button">動物園追加</button>
 
+			<br>
+			<br>
 			<div class="form-group">
-				生死：<select th:field="*{is_alive}" onchange="isAliveFlag(this);">
-					<option th:each="item : ${isAliveItems}" th:value="${item.key}"
-						th:text="${item.value}"></option>
-				</select>
-			</div>
-			<div class="form-group">
-				死亡日：<select th:field="*{deathYear}" th:disabled="*{is_alive} == 1">
-					<option value="0">--</option>
-					<option th:each="i : ${#numbers.sequence(1990, 2021)}"
-						th:value="${i}" th:text="${i}" th:selected="${i}==2000"></option>
-				</select>年 <select th:field="*{deathMonth}" th:disabled="*{is_alive} == 1">
-					<option value="0">--</option>
-					<option th:each="i : ${#numbers.sequence(01, 12)}" th:value="${i}"
-						th:text="${i}"></option>
-				</select>月 <select th:field="*{deathDay}" th:disabled="*{is_alive} == 1">
-					<option value="0">--</option>
-					<option th:each="i : ${#numbers.sequence(01, 31)}" th:value="${i}"
-						th:text="${i}"></option>
-				</select>日
-			</div>
-			<div class="form-group">
-				詳細：
+				詳細
 				<textarea class="form-control" th:field="*{details}"
 					th:errorclass="is-invalid"></textarea>
 				<div class="invalid-feedback" th:errors="*{details}"></div>
 			</div>
+			<br>
 			<div class="form-group">
-				特徴：
+				特徴
 				<textarea class="form-control" th:field="*{feature}"
 					th:errorclass="is-invalid"></textarea>
 				<div class="invalid-feedback" th:errors="*{feature}"></div>
 			</div>
-			<div class="form-group">
-				写真：<br> <span th:unless="*{animalImageList.size} == 0"
-					th:each="animalImage:*{animalImageList}" th:object="${animalImage}"
-					th:id="*{animalimage_id} + *{filetype}"
-					style="display: inline-block"> <img
-					th:src="@{{cloudinaryImageUrl}{animal_id}/{fileName}(cloudinaryImageUrl = ${cloudinaryImageUrl},animal_id=${animalInsertForm.animal_id},fileName=*{animalimage_id} + *{filetype})}"
-					width="200" height="200">
-					<button class="btn btn-danger btn-sm deleteImageButton"
-						type="button">削除</button>
-				</span>
-
-				<div id="animalImages">
-					<input type="file" accept="image/*" th:field="*{animalImage}"
-						th:errorclass="is-invalid" class="form-control-file">
-					<button class="btn btn-outline-warning btn-sm"
-						id="cancelInputFileButton" type="button">写真取消</button>
-					<br>
-				</div>
-				<button class="btn btn-outline-success btn-sm addInputFileButton"
-					type="button">写真追加</button>
-			</div>
-			<input type="hidden" th:field="*{deleteAnimalImageFiles}">
-			<button class="btn btn-outline-primary btn-sm" id="submitButton"
+			<br>
+			<button class="btn btn-primary btn-sm" id="submitButton"
 				type="submit">保存</button>
 			<button class="btn btn-danger btn-sm" type="button"
 				th:unless="*{animal_id}==0"
 				th:onclick="'deleteFunc(' + *{animal_id} + ',this);'">削除</button>
-			<button class="btn btn-outline-danger btn-sm" type="button"
+			<button class="btn btn-warning btn-sm" type="button"
 				onclick="location.href='/search'">一覧に戻る</button>
 		</form>
 	</div>
