--- a/src/main/resources/templates/user/mypage.html
+++ b/src/main/resources/templates/user/mypage.html
@@ -1,11 +1,13 @@
 <!doctype html>
 <html xmlns:th="http://www.thymeleaf.org"
-	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+	xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head>
 <meta charset="utf-8">
-<link rel="canonical"
-	href="https://getbootstrap.jp/docs/5.0/examples/starter-template/">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<script th:src="@{/webjars/jquery/jquery.min.js}"></script>
+<script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
 <!-- Bootstrap core CSS -->
 <link
 	href=https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css
@@ -14,84 +16,233 @@
 	crossorigin="anonymous">
 
 
-
+<!-- Custom styles for this template -->
+<link rel="canonical"
+	href="https://getbootstrap.jp/docs/5.0/examples/starter-template/">
 <!-- Custom styles for this template -->
 <link href="/css/starter-template.css" rel="stylesheet">
 
 
 <title th:text="${title}"></title>
+<script type="text/javascript">
+	$(function() {
+		$("#submitButton").click(function(e) {
+			$(this).prop('disabled', true);
+			let val = $.trim($('textarea[name="contents"]').val());
+			console.log(val);
+			if (val) {
+				$(this).text('送信中...');
+				$('form').submit();
+			} else {
+				alert('投稿内容が空欄です。');
+				$(this).prop('disabled', false);
+				return false;
+			}
+		});
+
+		$('.deletePost').click(function(e) {
+			const deleteImageFalg = confirm('この投稿を削除してもよろしいですか？');
+			if (deleteImageFalg) {
+				const post_id = $(this).next().val();
+				const zoo_id = $(this).next().next().val();
+				const csrf = $(this).next().next().next().val();
+				$('<form/>', {
+					action : '/post/delete',
+					method : 'post'
+				}).append($('<input/>', {
+					type : 'hidden',
+					name : 'post_id',
+					value : post_id
+				})).append($('<input/>', {
+					type : 'hidden',
+					name : 'zoo_id',
+					value : zoo_id
+				})).append($('<input/>', {
+					type : 'hidden',
+					name : '_csrf',
+					value : csrf
+				})).appendTo(document.body).submit();
+			}
+		});
+
+		$('.deleteChildPost').click(function(e) {
+			const deleteImageFalg = confirm('この投稿を削除してもよろしいですか？');
+			if (deleteImageFalg) {
+				const post_id = $(this).next().val();
+				const zoo_id = $(this).next().next().val();
+				const parent_id = $(this).next().next().next().val();
+				const csrf = $(this).next().next().next().next().val();
+				$('<form/>', {
+					action : '/post/deleteChild',
+					method : 'post'
+				}).append($('<input/>', {
+					type : 'hidden',
+					name : 'post_id',
+					value : post_id
+				})).append($('<input/>', {
+					type : 'hidden',
+					name : 'zoo_id',
+					value : zoo_id
+				})).append($('<input/>', {
+					type : 'hidden',
+					name : 'parent_id',
+					value : parent_id
+				})).append($('<input/>', {
+					type : 'hidden',
+					name : '_csrf',
+					value : csrf
+				})).appendTo(document.body).submit();
+			}
+		});
+
+		$('.postFavoriteRegister').click(function(e) {
+			var requestParam = $(this).prev().val();
+			var button = $(this);
+			if (button.hasClass("btn-outline-warning")) {
+				$.getJSON("/post/insertPostFavorite", {
+					post_id : requestParam
+				}, function(json) {
+					console.log(json);
+					console.log(button);
+					button.removeClass("btn-outline-warning");
+					button.addClass("btn-warning");
+					button.text("お気に入りから外す");
+				});
+			} else {
+				$.getJSON("/post/deletePostFavorite", {
+					post_id : requestParam
+				}, function(json) {
+					button.removeClass("btn-warning");
+					button.addClass("btn-outline-warning");
+					button.text("お気に入りに追加");
+				});
+			}
+		});
+
+	});
+</script>
 </head>
 
 <body>
 	<div th:replace="~{block/header_boot::headerA_boot}"></div>
 	<div th:object="${userForm}">
-	<div class="btn_area_center" th:if="${editFlag}">
-	
-		<button class="btn btn-primary btn-sm" type="button"
-			th:onclick="'location.href = \'' +@{/user/edit/{user_id}(user_id=*{user_id})} + '\''">プロフィール編集</button>
-	</div>
+		<div class="btn_area_center" th:if="${editFlag}">
+
+			<button class="btn btn-primary btn-sm" type="button"
+				th:onclick="'location.href = \'' +@{/user/edit/{user_id}(user_id=*{user_id})} + '\''">プロフィール編集</button>
+		</div>
 		<table class="table table-hover table-responsive">
 			<tr>
-				<th class="cell_title"><img th:src="*{profileImagePath}" width="100" height="100"></th>
+				<th class="cell_title"><img th:src="*{profileImagePath}"
+					width="100" height="100"></th>
 				<td th:text="*{name}"></td>
 			</tr>
 			<tr th:if="*{twitterLinkFlag}">
 				<th class="cell_title">Twiiter</th>
-				<td><a target=”_blank” th:href="@{https://twitter.com/{adress}(adress=*{adress})}" th:text="*{name} + さんのTwitterアカウント"></a></td>
+				<td><a target=”_blank”
+					th:href="@{https://twitter.com/{adress}(adress=*{adress})}"
+					th:text="*{name} + さんのTwitterアカウント"></a></td>
 			</tr>
 			<tr>
 				<th class="cell_title">プロフィール</th>
 				<td th:text="*{profile}" style="white-space: pre-wrap;"></td>
 			</tr>
-			<tr>
-				<th class="cell_title">投稿一覧</th>
-				<td><div th:each="post : ${postList}" th:object="${post}"
-						style="margin: 10px; border: solid;">
-						<div style="margin: 10px;">
-						<img
-								th:src="*{loginUser.profileImagePath}" width="40px"
-								height="40px"><span
-								th:text="*{loginUser.userName}"> </span> <span
-								th:text="*{displayDiffTime}"></span>
-						</div>
-						<div style="margin: 10px;">
-						<a th:href="@{/zoo/detail/{zoo_id}(zoo_id=*{zoo.zoo_id})}">
-						<h3 th:text="*{zoo.zoo_name} + '(' + *{zoo.prefecture.name} +')'"> </h3>
-						</a>
-						</div>
-						<div
-							th:unless="*{#dates.format(visitDate,'yyyy年M月d日')} == '9999年1月1日'"
-							th:text="'訪問日:  ' + *{#dates.format(visitDate,'yyyy年M月d日')}"
-							style="margin: 10px;"></div>
-						<div
-							th:if="*{#dates.format(visitDate,'yyyy年M月d日')} == '9999年1月1日'"
-							th:text="'訪問日:  指定なし'" style="margin: 10px;"></div>
-						<a th:href="@{/post/postDetail/{post_id}(post_id=*{post_id})}"
-							style="text-decoration: none; color: black;">
-							<div th:text="*{contents}"
-								style="white-space: pre-wrap; margin: 10px;"></div>
-						</a>
-						<div style="margin: 10px;">
-							<span th:each="postImage : *{postImageList}"
-								th:object="${postImage}"
-								style="display: inline-block; margin: 10px;"> <a
-								th:unless="*{animal} == null"
-								th:href="@{/detail/{animal_id}(animal_id=*{animal.animal_id})}"
-								th:text="'#' + *{animal.name}"></a><br
-								th:unless="*{animal} == null"> <a 
-								th:href="@{/post/postDetail/{post_id}(post_id=*{post.post_id})}"
-								style="text-decoration: none; color: black;"> <img
-									th:src="*{imageAddress}" width="100px" height="100px"
-									style="border: solid;">
-							</a>
-							</span>
-						</div>
-						<a th:href="@{/post/postDetail/{post_id}(post_id=*{post_id})}">
-						<div th:text="*{childrenCount}+'件のコメント'"></div>
-						</a>
-					</div></td>
-			</tr>
 		</table>
+		<ul class="nav nav-pills">
+			<li th:if="${tabType} == 1" class="nav-item"><a
+				class="nav-link active" aria-current="page" href="#">投稿</a></li>
+			<li th:unless="${tabType} == 1" class="nav-item"><a
+				class="nav-link active" aria-current="page"
+				th:href="@{/user/mypage/{user_id}/1(user_id=*{user_id})}">投稿</a></li>
+			<li th:if="${tabType} == 2" class="nav-item"><a class="nav-link"
+				href="#">お気に入り</a></li>
+			<li th:unless="${tabType} == 2" class="nav-item"><a
+				class="nav-link"
+				th:href="@{/user/mypage/{user_id}/2(user_id=*{user_id})}">お気に入り</a></li>
+			<li th:if="${tabType} == 3" class="nav-item"><a class="nav-link"
+				href="#">写真</a></li>
+			<li th:unless="${tabType} == 3" class="nav-item"><a
+				class="nav-link"
+				th:href="@{/user/mypage/{user_id}/3(user_id=*{user_id})}">写真</a></li>
+			<li th:if="${tabType} == 4" class="nav-item"><a class="nav-link"
+				href="#">コメント</a></li>
+			<li th:unless="${tabType} == 4" class="nav-item"><a
+				class="nav-link"
+				th:href="@{/user/mypage/{user_id}/4(user_id=*{user_id})}">コメント</a></li>
+		</ul>
+		<div th:if="${tabType == 1 || tabType == 2 || tabType == 4}"
+			th:each="post : ${postList}" th:object="${post}"
+			style="margin: 10px; border: solid;">
+			<div style="margin: 10px;">
+				<img th:src="*{loginUser.profileImagePath}" width="40px"
+					height="40px"><span th:text="*{loginUser.userName}"> </span>
+				<span th:text="*{displayDiffTime}"></span> <input type="hidden"
+					name="favorite_post_id" th:value="*{post_id}">
+				<button type="button" th:if="*{favoriteFlag == false}"
+					class="btn btn-outline-warning btn-sm postFavoriteRegister"
+					th:text="お気に入りに追加"></button>
+				<button type="button" th:unless="*{favoriteFlag == false}"
+					th:text="お気に入りから外す"
+					class="btn btn-warning btn-sm postFavoriteRegister"></button>
+				<button sec:authorize="isAuthenticated()"
+					class="btn btn-danger btn-sm deletePost"
+					th:if="*{loginUser.user_id} == ${#authentication.principal.user_id}"
+					type="button">この投稿を削除</button>
+				<input sec:authorize="isAuthenticated()"
+					th:if="*{loginUser.user_id} == ${#authentication.principal.user_id}"
+					type="hidden" name="post_id" th:value="*{post_id}"> <input
+					sec:authorize="isAuthenticated()"
+					th:if="*{loginUser.user_id} == ${#authentication.principal.user_id}"
+					type="hidden" name="zoo_id" th:value="${post.zoo.zoo_id}">
+				<input sec:authorize="isAuthenticated()"
+					th:if="*{loginUser.user_id} == ${#authentication.principal.user_id}"
+					type="hidden" th:name="${_csrf.parameterName}"
+					th:value="${_csrf.token}" />
+			</div>
+			<div style="margin: 10px;">
+				<a th:unless="*{parentPost != null}"
+					th:href="@{/zoo/detail/{zoo_id}(zoo_id=*{zoo.zoo_id})}">
+					<h5 th:text="*{zoo.zoo_name} + '(' + *{zoo.prefecture.name} +')'">
+					</h5>
+				</a> <a th:if="*{parentPost != null} "
+					th:href="@{/post/postDetail/{post_id}(post_id=*{parentPost.post_id})}">
+					<h5 th:text="*{parentPost.loginUser.userName} + 'さんの投稿へのコメント'">
+					</h5>
+				</a>
+			</div>
+			<div
+				th:if="*{#dates.format(visitDate,'yyyy年M月d日') != '9999年1月1日' && parentPost == null}"
+				th:text="'訪問日:  ' + *{#dates.format(visitDate,'yyyy年M月d日')}"
+				style="margin: 10px;"></div>
+			<div
+				th:if="*{#dates.format(visitDate,'yyyy年M月d日') == '9999年1月1日' && parentPost == null}"
+				th:text="'訪問日:  指定なし'" style="margin: 10px;"></div>
+			<a th:href="@{/post/postDetail/{post_id}(post_id=*{post_id})}"
+				style="text-decoration: none; color: black;">
+				<div th:text="*{contents}"
+					style="white-space: pre-wrap; margin: 10px;"></div>
+			</a>
+			<div style="margin: 10px;">
+				<span th:each="postImage : *{postImageList}"
+					th:object="${postImage}"
+					style="display: inline-block; margin: 10px;"> <a
+					th:unless="*{animal} == null"
+					th:href="@{/detail/{animal_id}(animal_id=*{animal.animal_id})}"
+					th:text="'#' + *{animal.name}"></a><br
+					th:unless="*{animal} == null"> <a
+					th:href="@{/post/postDetail/{post_id}(post_id=*{post.post_id})}"
+					style="text-decoration: none; color: black;"> <img
+						th:src="*{imageAddress}" width="100px" height="100px"
+						style="border: solid;">
+				</a>
+				</span>
+			</div>
+			<a th:if="*{parentPost} == null"
+				th:href="@{/post/postDetail/{post_id}(post_id=*{post_id})}">
+				<div th:text="*{childrenCount}+'件のコメント'"></div>
+			</a>
+		</div>
+
 	</div>
 </body>
 </html>
